image fix attempt

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Stylesheet by R Helsley 2021*/
 html{
-    background-image: url("/img/IMG_9584.jpg");
+    background-image: url("img/IMG_9584.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
