--- a/lib/L.Control.Pan.css
+++ b/lib/L.Control.Pan.css
@@ -90,16 +90,16 @@
 }
 
 .leaflet-control-pan-up {
-	background-image: url(/lib/images/pan-up.png);
+	background-image: url(../lib/images/pan-up.png);
 }
 .leaflet-control-pan-left {
-	background-image: url(/lib/images/pan-left.png);
+	background-image: url(../lib/images/pan-left.png);
 }
 .leaflet-control-pan-right {
-	background-image: url(/lib/images/pan-right.png);
+	background-image: url(../lib/images/pan-right.png);
 }
 .leaflet-control-pan-down {
-	background-image: url(/lib/images/pan-down.png);
+	background-image: url(../lib/images/pan-down.png);
 }
 
 /****** Touch Alterations ******/
